--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1447,7 +1447,7 @@
             </div>
             <div class="flex flex-col">
                 <h2 class="text-lg font-semibold text-gray-900 leading-tight">We know just the table</h2>
-                <p class="text-sm text-gray-600 leading-snug">For holidays. On a weeknight. Find meals for every occasion.</p>
+                <p class="text-sm  text-black leading-snug">For holidays. On a weeknight. Find meals for every occasion.</p>
             </div>
         </div>
 
@@ -1460,7 +1460,7 @@
             </div>
             <div class="flex flex-col">
                 <h2 class="text-lg font-semibold text-gray-900 leading-tight">Our Delicious Promise</h2>
-                <p class="text-sm text-gray-600 leading-snug">If your experience isn't what you expected, we'll help make it right.</p>
+                <p class="text-sm text-black leading-snug">If your experience isn't what you expected, we'll help make it right.</p>
             </div>
         </div>
 
@@ -1472,7 +1472,7 @@
             </div>
             <div class="flex flex-col">
                 <h2 class="text-lg font-semibold text-gray-900 leading-tight">Support for every seat</h2>
-                <p class="text-sm text-gray-600 leading-snug">Real people. Real support. 24/7—whenever you host or pull up a chair.</p>
+                <p class="text-sm  text-black leading-snug">Real people. Real support. 24/7—whenever you host or pull up a chair.</p>
             </div>
         </div>
 
