--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1309,7 +1309,7 @@
                 
             
                 <div class="p-3">
-                    <h3 class="text-xl font-semibold text-gray-700 mb-2">Ocean city</h3>
+                    <h3 class="text-base font-semibold text-gray-700 mb-2">Ocean city</h3>
                 </div>
             </div>
         </section>
