--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1657,7 +1657,7 @@
 
     <!-- info starts -->
 
-    <div class="max-w-7xl mx-auto px-6 py-12 space-y-12 text-gray-800" role="region" aria-label="How Insta Delicious works">
+    <div class="px-4 md:px-8 lg:px-16 xl:px-24 py-12 space-y-12 text-gray-800" role="region" aria-label="How Insta Delicious works">
     
     <section>
         <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">
