--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1660,11 +1660,12 @@
     <div class="px-4 md:px-8 lg:px-16 xl:px-24 py-12 space-y-12 text-gray-800" role="region" aria-label="How Insta Delicious works">
     
     <section>
-        <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">
+        <!-- <h2 class="text-3xl font-bold text-gray-800 mb-1"> -->
+            <h2 class="text-3xl font-bold text-gray-800 mb-1">
             Discover what Insta Delicious is all about
         </h2>
         <div class="grid grid-cols-1 gap-6 leading-relaxed">
-            <p class="whitespace-pre-line">
+            <p class="whitespace-pre-line text-sm">
                 With growing community of home chefs, InstaDelicious connects passionate local cooks with neighbors and foodies looking for something more than a lonely takeout box. The ID community offers an array of dining experiences, such as garden brunches, rooftop dinners, cozy kitchen counters, family-style feasts, and more. Discover authentic dishes in neighborhoods that everyone dreams of tasting.
 
                 All it takes is a quick InstaDelicious table search to securely book your next seat at a garden, kitchen, or patio table anywhere in the city. If you're dining with a large group, you can find host homes on InstaDelicious that give you the warmth and connection you need without sacrificing the quality and flavor that matter most, all within your budget.
@@ -1677,11 +1678,11 @@
     <hr class="border-gray-200" />
 
     <section>
-        <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">
+        <h2 class="text-3xl font-bold text-gray-800 mb-1">
             Here’s what makes a home-hosted meal perfect for you
         </h2>
         <div class="grid grid-cols-1 gap-6 leading-relaxed">
-            <p class="whitespace-pre-line">
+            <p class="whitespace-pre-line text-sm">
                 Whether you're planning a Sunday family dinner with your dog by your side, a relaxing weekend brunch, or a social evening meeting new people, home-hosted meals are ideal for every craving. You can find everything from cozy rustic kitchens and serene garden patios to modern rooftop dining and elegant dining rooms, all with a warm atmosphere designed to make your experience comfortable and personal.
 
                 By pulling up a chair at a private table, you’ll enjoy the genuine warmth of a home and authentic family recipes, making it much easier to enjoy a stress-free evening connecting with your neighbors. You can also find host tables with unique features like sunset balcony views, open-hearth cooking, or peaceful backyard garden spaces.
