--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1705,7 +1705,7 @@
                 </summary>
                 
                 <div class="p-5 border-t border-gray-100">
-                    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 text-blue-600 font-medium">
+                    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 text-blue-600 font-medium  text-sm">
                         <li><a href="#florida" class="hover:underline">Florida Delicious home cooked food</a></li>
                         <li><a href="#hawaii" class="hover:underline">Hawaii Delicious home cooked food</a></li>
                         <li><a href="#colorado" class="hover:underline">Colorado Delicious home cooked food</a></li>
@@ -1753,7 +1753,7 @@
                 </summary>
                 
                 <div class="p-5 border-t border-gray-100">
-                    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 text-blue-600 font-medium">
+                    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 text-blue-600 font-medium  text-sm">
                         <li><a href="#usa" class="hover:underline">United States Delicious home cooked food</a></li>
                         <li><a href="#florida" class="hover:underline">Florida Delicious home cooked food</a></li>
                         <li><a href="#hawaii" class="hover:underline">Hawaii Delicious home cooked food</a></li>
