--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -260,19 +260,8 @@
                     </svg>
                 </button>
                 <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: 300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7-7" />
-                    </svg> -->
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 4; overflow: visible;"><path fill="none" d="m12 4 11.3 11.3a1 1 0 0 1 0 1.4L12 28"></path></svg> -->
-
-                     <!-- <svg aria-label="Next icon" role="img" xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none" class="" data-sentry-element="svg" data-sentry-component="ChevronRight" data-sentry-source-file="index.tsx"><mask id="mask0_5434_3141" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="12" height="12" data-sentry-element="mask" data-sentry-source-file="index.tsx"><rect width="12" height="12" fill="#D9D9D9" data-sentry-element="rect" data-sentry-source-file="index.tsx"></rect></mask><g mask="url(#mask0_5434_3141)" data-sentry-element="g" data-sentry-source-file="index.tsx"><path d="M7.175 5.575L3.275 1.675C3.09167 1.49167 3 1.25833 3 0.975C3 0.691667 3.09167 0.458333 3.275 0.275C3.45833 0.0916667 3.69167 0 3.975 0C4.25833 0 4.49167 0.0916667 4.675 0.275L9.275 4.875C9.375 4.975 9.44583 5.08333 9.4875 5.2C9.52917 5.31667 9.55 5.44167 9.55 5.575C9.55 5.70833 9.52917 5.83333 9.4875 5.95C9.44583 6.06667 9.375 6.175 9.275 6.275L4.675 10.875C4.49167 11.0583 4.25833 11.15 3.975 11.15C3.69167 11.15 3.45833 11.0583 3.275 10.875C3.09167 10.6917 3 10.4583 3 10.175C3 9.89167 3.09167 9.65833 3.275 9.475L7.175 5.575Z" fill="#1E1E1E" data-sentry-element="path" data-sentry-source-file="index.tsx"></path></g></svg> -->
-
-                      <!-- <svg aria-label="Next icon" role="img" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none">
-                        <circle cx="8" cy="8" r="8" fill="white" />
-                        <path d="M9.175 8L6.275 5.1C6.09167 4.91667 6 4.68333 6 4.4C6 4.11667 6.09167 3.88333 6.275 3.7C6.45833 3.51667 6.69167 3.425 6.975 3.425C7.25833 3.425 7.49167 3.51667 7.675 3.7L11.275 7.3C11.375 7.4 11.4458 7.50833 11.4875 7.625C11.5292 7.74167 11.55 7.86667 11.55 8C11.55 8.13333 11.5292 8.25833 11.4875 8.375C11.4458 8.49167 11.375 8.6 11.275 8.7L7.675 12.3C7.49167 12.4833 7.25833 12.575 6.975 12.575C6.69167 12.575 6.45833 12.4833 6.275 12.3C6.09167 12.1167 6 11.8833 6 11.6C6 11.3167 6.09167 11.0833 6.275 10.9L9.175 8Z" fill="#1E1E1E" />
-                        </svg> -->
-
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="StyledInlineSvg-sc-45a1y2-0 jIkpSI fetched-icon"><path d="M5.79289 2.79289C6.18342 2.40237 6.81643 2.40237 7.20696 2.79289L11.707 7.29289C12.0975 7.68342 12.0975 8.31643 11.707 8.70696L7.20696 13.207C6.81643 13.5974 6.18341 13.5975 5.79289 13.207C5.40242 12.8164 5.40242 12.1834 5.79289 11.7929L9.58586 7.99992L5.79289 4.20696C5.40237 3.81643 5.40237 3.18342 5.79289 2.79289Z" fill="currentColor"></path></svg>
+                    
+                         <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
                 </button>
             </div>
         </div>
@@ -720,9 +709,8 @@
                 </svg>
             </button>
             <button onclick="document.querySelector('.dish-carousel').scrollBy({left: 340, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5">
-                    <path d="M5.79289 2.79289C6.18342 2.40237 6.81643 2.40237 7.20696 2.79289L11.707 7.29289C12.0975 7.68342 12.0975 8.31643 11.707 8.70696L7.20696 13.207C6.81643 13.5974 6.18341 13.5975 5.79289 13.207C5.40242 12.8164 5.40242 12.1834 5.79289 11.7929L9.58586 7.99992L5.79289 4.20696C5.40237 3.81643 5.40237 3.18342 5.79289 2.79289Z" fill="currentColor"></path>
-                </svg>
+            
+                <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
             </button>
         </div>
     </div>
