--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -578,7 +578,8 @@
 
 <!-- doordash carosal start -->
 
-<section class="relative group w-full max-w-4xl mx-auto py-4">
+<!-- <section class="relative group w-full max-w-4xl mx-auto py-4"> -->
+    <section class="relative group w-full max-w-7xl mx-auto py-4">
   
   <button class="absolute left-0 top-1/2 -translate-y-1/2 z-10 bg-white shadow-md rounded-full p-2 hidden md:block hover:bg-gray-100 transition">
     <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
@@ -594,6 +595,35 @@
     <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
       <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
       <span class="text-sm font-semibold text-gray-800">Acclaimed</span>
+    </a>
+
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">American</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Italian</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Mexican</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Japanese</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Korean</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Vegan</span>
+    </a>
+    <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
+      <img src="https://img.cdn4dd.com/p/fit=contain,width=100,height=100,format=auto,quality=50/managed/dineout/cuisine-icons-v2/acclaimed.png" alt="Acclaimed" class="w-8 h-8 object-contain mr-2">
+      <span class="text-sm font-semibold text-gray-800">Gluten Free</span>
     </a>
 
     <a href="#" class="flex-shrink-0 flex items-center bg-gray-100 hover:bg-gray-200 rounded-full px-4 py-2 transition min-w-[140px]">
