--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -146,9 +146,9 @@
           
           <div class="flex items-center space-x-4">
 
-            <button href="../join-as-professional/" class="bg-gradient-to-r from-orange-400 to-orange-600 text-white font-bold px-4 py-2 rounded-full hover:from-orange-500 hover:to-orange-700 transition-all shadow-md mr-4">
+          <a href="../startcooking/" class="inline-block bg-gradient-to-r from-orange-400 to-orange-600 text-white font-bold px-4 py-2 rounded-full hover:from-orange-500 hover:to-orange-700 transition-all shadow-md mr-4">
             Start cooking
-          </button>
+            </a>
           
             <!-- Menu Button -->
             <div class="relative">
