--- a/public/Why-Udo/index.html
+++ b/public/Why-Udo/index.html
@@ -104,7 +104,7 @@
                         <!-- <span class="text-lg lg:text-xl">When you use <span class="font-bold text-white">UDo App</span>, that money stays with <span class="font-bold text-white">you</span> and the <span class="font-bold text-white">worker</span>. Download now to keep your local economy direct.</span> -->
 
                             <br/><br/>
-                        <span class="text-lg lg:text-xl"> We believe you shouldn't pay a premium just to find help. By using the <span class="font-bold text-white">UDo App</span>, directly, we bypass expensive Google ads and middleman fees—passing 100% of the savings to you and your local pro.</span>
+                        <span class="text-lg lg:text-xl"> We believe you shouldn't pay a premium just to find help. By using the <span class="font-bold text-white">UDo App</span>, directly, we bypass expensive Google ads and middleman fees—passing 100% of the savings to you and the pro.</span>
                     </p>
                 </div>
 
